LAB_11_12/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  selector:
    matchLabels:
      app: mariadb-app
  template:
    metadata:
      labels:
        app: mariadb-app
    spec:
      containers:
      - name: mariadb-container
        image: mariadb:12.2.1-rc
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: mariadb-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3306
